@startuml
!define TABLE(x) class x << (T,#FFAAAA) >>

package "Database: user" {
    TABLE(users) {
        + id : uuid
        + name : text
        + password : text
        + email : text
        + balance : integer
        + created_at : timestamp
        + updated_at : timestamp
    }
}

package "Database: product" {
    TABLE(products) {
        + id : uuid
        + sku : text
        + name : text
        + stock : integer
        + price : integer
        + category_id : uuid
        + created_at : timestamp
        + updated_at : timestamp
    }

    TABLE(categories) {
        + id : uuid
        + name : text
        + created_at : timestamp
        + updated_at : timestamp
    }
}

package "Database: order" {
    TABLE(orders) {
        + id : uuid
        + user_id : uuid
        + total_price : integer
        + total_paid : integer
        + total_return : integer
        + receipt_code : text
        + created_at : timestamp
        + updated_at : timestamp
    }

    TABLE(order_products) {
        + id : uuid
        + order_id : uuid
        + product_id : uuid
        + total_price : text
        + qty : integer
        + created_at : timestamp
        + updated_at : timestamp
    }
}

package "Database: auth" {
    TABLE(sessions) {
        + id : uuid
        + user_id : uuid
        + access_token : text
        + refresh_token : text
        + access_token_expired_at : timestamp
        + refresh_token_expired_at : timestamp
        + created_at : timestamp
        + updated_at : timestamp
    }
}

' Relationships
users "1" -- "0..*" orders : user_id
orders "1" -- "0..*" order_products : order_id
products "1" -- "0..*" order_products : product_id
categories "1" -- "0..*" products : category_id
users "1" -- "0..*" sessions : user_id
@enduml